[package]
name = "udi"
version = "0.0.1"
authors = ["Dan McNulty <mcnulty@users.noreply.github.com>"]
description = """
This experimental library implements the debugger side of the UDI protocol
by sending requests, receiving responses and events using a pseudo-filesystem for transport."""
homepage = "https://github.com/dxdbg/udi"
repository = "https://github.com/dxdbg/udi.git"
license = "MPL-2.0"
edition = "2021"

[dependencies]
ciborium = "0.2"
downcast-rs = "1.2"
mio = { version = "0.8", features = ["os-ext"] }
serde = "1.0"
serde_derive = "1.0"
serde_repr = "0.1"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi",
    "winnt",
    "synchapi",
    "memoryapi",
    "errhandlingapi",
    "winbase",
    "minwinbase",
] }

[target.'cfg(unix)'.dependencies]
uzers = "0.11.2"

[dev-dependencies]
native-file-tests = { git = "https://github.com/dxdbg/native-file-tests.git" }
lazy_static = "1.1.0"

[badges]
maintenance = { status = "experimental" }
